# Lead_Agents

./: .env.example  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/karpathy-guidelines/: SKILL.md
.github/skills/superpowers-brainstorming/: SKILL.md
.github/skills/superpowers-verification-before-completion/: SKILL.md
.github/skills/superpowers-workflow/: SKILL.md
.github/skills/superpowers-writing-plans/: SKILL.md
lead_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sentinel_lead_agent/: README.md  chat.py  local_test.py  main.py  requirements.txt
sentinel_lead_agent/agents/: analyzer_agent.py  discovery_agent.py  outreach_agent.py  qualification_agent.py
sentinel_lead_agent/api/: routes.py
sentinel_lead_agent/formatters/: report_formatter.py
sentinel_lead_agent/models/: lead_model.py
sentinel_lead_agent/prompts/: analyzer_agent.txt  discovery_agent.txt  master_system_prompt.txt  outreach_agent.txt  qualification_agent.txt  scoring_rules.txt
sentinel_lead_agent/services/: config.py  lead_intelligence_service.py  logging_service.py  openai_service.py  prompt_service.py
sentinel_lead_agent/tools/: scoring_tool.py  scraper_tool.py  search_tool.py
src/: crew.py
src/lead_agents/: crew.py  main.py
src/lead_agents/config/: agents.yaml  tasks.yaml
